updated notebook to test in paperspace

--- a/python_files/KK_testing_grounds.ipynb
+++ b/python_files/KK_testing_grounds.ipynb
@@ -2,41 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "attempted relative import with no known parent package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdata_setup\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mRAW_DATA\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m raw_data_handler \u001b[38;5;28;01mas\u001b[39;00m rdh\n\u001b[1;32m      7\u001b[0m NUM_EPOCHS \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m      8\u001b[0m BATCH_SIZE \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m32\u001b[39m\n",
-      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
-     ]
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x10b10d630>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
     "import os\n",
     "import torch\n",
-    "import data_setup\n",
-    "from .raw_data_handler as rdh\n",
+    "import data_setup, model_builder, engine, utils\n",
     "\n",
     "\n",
-    "NUM_EPOCHS = 10\n",
-    "BATCH_SIZE = 32\n",
-    "HIDDEN_UNITS = 25\n",
-    "LEARNING_RATE = 0.05\n",
+    "NUM_EPOCHS = 20\n",
+    "BATCH_SIZE = 64\n",
+    "HIDDEN_UNITS = 128\n",
+    "LEARNING_RATE = 0.001\n",
     "\n",
     "torch.manual_seed(42)  # Set seed for reproducibility\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Using device: mps\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05c04c37447847bfb02d3207e89ac706",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epochs:   0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# THIS WILL RUN A TRAINING CYCLE ON A TINY VGG MODEL\n",
     "if __name__ == '__main__':\n",
     "\n",
     "    train_dir = \"/Users/kkodweis/Github-Repos/EAS510-BasicsAI/multi-modal/datasets/SampleV0/Train\"\n",
@@ -82,7 +107,7 @@
     "    loaded_modelV2.eval()\n",
     "    with torch.inference_mode():\n",
     "        loaded_modelV2_preds = loaded_modelV2(test_dataloader)\n",
-    "    print(loaded_modelV2_preds)"
+    "    print(loaded_modelV2_preds)\n"
    ]
   },
   {
