Running ResNet18 Image-only classification model

--- a/python_files/_KK_testing_grounds.ipynb
+++ b/python_files/_KK_testing_grounds.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x10a3c1570>"
+       "<torch._C.Generator at 0x1123fd570>"
       ]
      },
      "execution_count": 1,
@@ -23,9 +23,9 @@
     "import data_setup, model_builder, engine, utils\n",
     "\n",
     "\n",
-    "NUM_EPOCHS = 100\n",
+    "NUM_EPOCHS = 3\n",
     "BATCH_SIZE = 32\n",
-    "HIDDEN_UNITS = 64\n",
+    "HIDDEN_UNITS = 5\n",
     "LEARNING_RATE = 0.001\n",
     "\n",
     "torch.manual_seed(42)  # Set seed for reproducibility\n"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -46,15 +46,18 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "ResNet.__init__() missing 2 required positional arguments: 'block' and 'num_blocks'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 19\u001b[0m\n\u001b[1;32m     10\u001b[0m data_transform \u001b[38;5;241m=\u001b[39m utils\u001b[38;5;241m.\u001b[39mperspectiveV0()\n\u001b[1;32m     12\u001b[0m train_dataloader, test_dataloader, class_labels \u001b[38;5;241m=\u001b[39m data_setup\u001b[38;5;241m.\u001b[39mcreate_dataloaders(\n\u001b[1;32m     13\u001b[0m     train_dir\u001b[38;5;241m=\u001b[39mtrain_dir,\n\u001b[1;32m     14\u001b[0m     test_dir\u001b[38;5;241m=\u001b[39mtest_dir,\n\u001b[1;32m     15\u001b[0m     transform\u001b[38;5;241m=\u001b[39mdata_transform\u001b[38;5;241m.\u001b[39mdata_transform,\n\u001b[1;32m     16\u001b[0m     batch_size\u001b[38;5;241m=\u001b[39mBATCH_SIZE\n\u001b[1;32m     17\u001b[0m )\n\u001b[0;32m---> 19\u001b[0m model \u001b[38;5;241m=\u001b[39m model_builder\u001b[38;5;241m.\u001b[39mResNet(num_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     21\u001b[0m loss_fn \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mCrossEntropyLoss()\n\u001b[1;32m     22\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mSGD(params\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mLEARNING_RATE)\n",
-      "\u001b[0;31mTypeError\u001b[0m: ResNet.__init__() missing 2 required positional arguments: 'block' and 'num_blocks'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ca723c9dc6754c1f920740588023ebaf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epochs:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -76,7 +79,7 @@
     "        batch_size=BATCH_SIZE\n",
     "    )\n",
     "\n",
-    "    model = model_builder.ResNet(num_classes=3).to(device)\n",
+    "    model = model_builder.ResNet18(num_classes=3).to(device)\n",
     "\n",
     "    loss_fn = torch.nn.CrossEntropyLoss()\n",
     "    optimizer = torch.optim.SGD(params=model.parameters(), lr=LEARNING_RATE)\n",
