--- a/python_files/_KK_testing_grounds.ipynb
+++ b/python_files/_KK_testing_grounds.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x118801570>"
+       "<torch._C.Generator at 0x11ae01570>"
       ]
      },
      "execution_count": 1,
@@ -23,9 +23,9 @@
     "import data_setup, model_builder, engine, utils\n",
     "\n",
     "\n",
-    "NUM_EPOCHS = 10\n",
+    "NUM_EPOCHS = 15\n",
     "BATCH_SIZE = 64\n",
-    "HIDDEN_UNITS = 10\n",
+    "HIDDEN_UNITS = 20\n",
     "LEARNING_RATE = 0.001\n",
     "\n",
     "torch.manual_seed(42)  # Set seed for reproducibility\n"
@@ -48,34 +48,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6290149ed0a74b61a13a94c31b17eb9b",
+       "model_id": "8f499a39b5aa46d78225364cfc208bed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Epochs:   0%|          | 0/10 [00:00<?, ?it/s]"
+       "Epochs:   0%|          | 0/15 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Loss: 0.8445 | Train Acc: 0.6114 \n",
-      "Test Loss: 0.7911 | Test Acc: 0.6348\n",
-      "\n",
-      "Train Loss: 0.7851 | Train Acc: 0.6464 \n",
-      "Test Loss: 0.7828 | Test Acc: 0.6442\n",
-      "\n",
-      "Train Loss: 0.7758 | Train Acc: 0.6536 \n",
-      "Test Loss: 0.7614 | Test Acc: 0.6639\n",
-      "\n",
-      "Train Loss: 0.7695 | Train Acc: 0.6603 \n",
-      "Test Loss: 0.7584 | Test Acc: 0.6614\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -90,7 +72,7 @@
     "\n",
     "    data_transform = utils.baseV0()\n",
     "\n",
-    "    train_dataloader, test_dataloader, class_labels = data_setup.create_dataloaders(\n",
+    "    train_dataloader, test_dataloader, class_labels = data_setup.create_image_dataloaders(\n",
     "        train_dir=train_dir,\n",
     "        test_dir=test_dir,\n",
     "        transform=data_transform.data_transform,\n",
