promising updates using randomcrop transform in our base transform

--- a/python_files/_KK_testing_grounds.ipynb
+++ b/python_files/_KK_testing_grounds.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,6 +58,58 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss: 0.8445 | Train Acc: 0.6114 \n",
+      "Test Loss: 0.7911 | Test Acc: 0.6348\n",
+      "\n",
+      "Train Loss: 0.7851 | Train Acc: 0.6464 \n",
+      "Test Loss: 0.7828 | Test Acc: 0.6442\n",
+      "\n",
+      "Train Loss: 0.7758 | Train Acc: 0.6536 \n",
+      "Test Loss: 0.7614 | Test Acc: 0.6639\n",
+      "\n",
+      "Train Loss: 0.7695 | Train Acc: 0.6603 \n",
+      "Test Loss: 0.7584 | Test Acc: 0.6614\n",
+      "\n",
+      "Train Loss: 0.7639 | Train Acc: 0.6612 \n",
+      "Test Loss: 0.7708 | Test Acc: 0.6556\n",
+      "\n",
+      "Train Loss: 0.7602 | Train Acc: 0.6728 \n",
+      "Test Loss: 0.7724 | Test Acc: 0.6562\n",
+      "\n",
+      "Train Loss: 0.7603 | Train Acc: 0.6642 \n",
+      "Test Loss: 0.7606 | Test Acc: 0.6619\n",
+      "\n",
+      "Train Loss: 0.7507 | Train Acc: 0.6724 \n",
+      "Test Loss: 0.7509 | Test Acc: 0.6552\n",
+      "\n",
+      "Train Loss: 0.7541 | Train Acc: 0.6630 \n",
+      "Test Loss: 0.7750 | Test Acc: 0.6323\n",
+      "\n",
+      "Train Loss: 0.7520 | Train Acc: 0.6724 \n",
+      "Test Loss: 0.7569 | Test Acc: 0.6667\n",
+      "\n",
+      "Train Loss: 0.7474 | Train Acc: 0.6724 \n",
+      "Test Loss: 0.7689 | Test Acc: 0.6542\n",
+      "\n",
+      "Train Loss: 0.7503 | Train Acc: 0.6698 \n",
+      "Test Loss: 0.7689 | Test Acc: 0.6475\n",
+      "\n",
+      "Train Loss: 0.7444 | Train Acc: 0.6763 \n",
+      "Test Loss: 0.7618 | Test Acc: 0.6589\n",
+      "\n",
+      "Train Loss: 0.7348 | Train Acc: 0.6824 \n",
+      "Test Loss: 0.7488 | Test Acc: 0.6685\n",
+      "\n",
+      "Train Loss: 0.7432 | Train Acc: 0.6722 \n",
+      "Test Loss: 0.7369 | Test Acc: 0.6911\n",
+      "\n",
+      "[INFO] Saving model to: models/ResNet18_model_V3_Sample_V0_Transform_baseV0.pth\n"
+     ]
     }
    ],
    "source": [
