Confirming on early models that larger image data sets that disregards every genre except the 10 most popular, as a programmatic way to broaden the test sets as well as clean the data a bit more helping with potential overlap in labeling and lowering the test loss

--- a/_RD1_40108P_28C_CSV_Resource_Builder.ipynb
+++ b/_RD1_40108P_28C_CSV_Resource_Builder.ipynb
@@ -40609,6 +40609,186 @@
     {
      "name": "stderr",
      "output_type": "stream",
+     "text": [
+      "100%|██████████| 565/565 [01:19<00:00,  7.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Sport\n",
+      "Label: Sport | Train sample image set download complete.\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Sport\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 142/142 [00:15<00:00,  9.02it/s]\n",
+      " 62%|██████▏   | 8/13 [1:29:53<33:55, 407.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Sport\n",
+      "Label: Sport | Test sample image set download complete.\n",
+      "i: 40108, Action movies: 5331, Action urls: 5331\n",
+      "train_url_array length: 4264\n",
+      "test_url_array length: 1067\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Action\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4264/4264 [08:51<00:00,  8.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Action\n",
+      "Label: Action | Train sample image set download complete.\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Action\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1067/1067 [01:58<00:00,  8.98it/s]\n",
+      " 69%|██████▉   | 9/13 [1:40:43<31:35, 473.92s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Action\n",
+      "Label: Action | Test sample image set download complete.\n",
+      "i: 40108, Western movies: 853, Western urls: 853\n",
+      "train_url_array length: 682\n",
+      "test_url_array length: 171\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Western\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 682/682 [01:33<00:00,  7.30it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Western\n",
+      "Label: Western | Train sample image set download complete.\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Western\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 171/171 [00:17<00:00,  9.51it/s]\n",
+      " 77%|███████▋  | 10/13 [1:42:34<18:34, 371.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Western\n",
+      "Label: Western | Test sample image set download complete.\n",
+      "i: 40108, Horror movies: 3990, Horror urls: 3990\n",
+      "train_url_array length: 3192\n",
+      "test_url_array length: 798\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Horror\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3192/3192 [06:58<00:00,  7.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Horror\n",
+      "Label: Horror | Train sample image set download complete.\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Horror\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 798/798 [01:52<00:00,  7.09it/s]\n",
+      " 85%|████████▍ | 11/13 [1:51:25<13:54, 417.40s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Horror\n",
+      "Label: Horror | Test sample image set download complete.\n",
+      "i: 40108, Musical movies: 845, Musical urls: 845\n",
+      "train_url_array length: 676\n",
+      "test_url_array length: 169\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Musical\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 676/676 [01:18<00:00,  8.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Musical\n",
+      "Label: Musical | Train sample image set download complete.\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Musical\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 169/169 [00:20<00:00,  8.10it/s]\n",
+      " 92%|█████████▏| 12/13 [1:53:04<05:24, 324.72s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Musical\n",
+      "Label: Musical | Test sample image set download complete.\n",
+      "i: 40108, Mystery movies: 2395, Mystery urls: 2395\n",
+      "train_url_array length: 1916\n",
+      "test_url_array length: 479\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Mystery\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
      "text": []
     }
    ],
