First setup feature ready to start training in paperspace environment.

--- a/_RD1_40108P_28C_CSV_Resource_Builder.ipynb
+++ b/_RD1_40108P_28C_CSV_Resource_Builder.ipynb
@@ -40335,7 +40335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -40789,7 +40789,42 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "100%|██████████| 1916/1916 [04:46<00:00,  6.69it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Train/Mystery\n",
+      "Label: Mystery | Train sample image set download complete.\n",
+      "/Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Mystery\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 479/479 [01:27<00:00,  5.46it/s]\n",
+      "100%|██████████| 13/13 [1:59:19<00:00, 550.70s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Download completed for path: /Users/kkodweis/Github-Repos/EAS510-BasicsAI/datasets//clean_test_V1/Test/Mystery\n",
+      "Label: Mystery | Test sample image set download complete.\n",
+      "Full sample image set download complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
